[tool.poetry]
name = "ds-template"
version = "0.1.0"
description = "Simple template for data science projects"
authors = ["Ivan Dziadyk <vaaano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13.0"
kaggle = "^1.5.16"
pandas = "^2.1.3"
matplotlib = "^3.8.1"
scikit-learn = "^1.3.2"
requests = "^2.31.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
